background color and wording change

--- a/css/art_com.css
+++ b/css/art_com.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #121212;
+    background-color: #FFFFFE;
     background-repeat: no-repeat !important;
     background-position: center !important;
     background-size: cover !important;
