--- a/css/promotion.css
+++ b/css/promotion.css
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    /*background-image: ;*/
 }
 
 .promotion-wrapper {
@@ -23,12 +24,6 @@
     text-align: center;
 }
 
-.p-text p {
-    color: #605AFF;
-    font-size: 60px;
-    font-weight: 700;
-    margin-bottom: 10px;
-}
 
 .p-text h5 {
     color: #B2AFFF;
