edited until horticultural soc.

--- a/css/promotion.css
+++ b/css/promotion.css
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    /*background-image: ;*/
+    background-image: url(photos/crowd-joyful-multinational-woman.png) !important;
 }
 
 .promotion-wrapper {
