--- a/css/promotion.css
+++ b/css/promotion.css
@@ -1,5 +1,5 @@
 .promotion {
-    background: url(photos/crowd-joyful-multinational-woman.png) !important;
+    background: url(photos/promobackground.png) !important;
     background-position: bottom;
     width: 100%;
     height: 100vh !important;
